# makrounaDB

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  plan.md
.github/workflows/: release.yml
app/: .gitignore  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/components/: Architecture.tsx  Features.tsx  Footer.tsx  ForkCursor.tsx  Hero.tsx  HowItWorks.tsx  Installation.tsx  Nav.tsx  Overview.tsx  PastaCommands.tsx
app/components/ui/: CodeBlock.tsx  FadeIn.tsx  Section.tsx
benchmarks/: README.md  simple_benchmark.py
build-windows/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
config/: server.conf.example
docs/: README.md
docs/architecture/: overview.md  technical-presentation.md
docs/help/: README.md  generate_man.sh  makrounaDB.1  makrounaDB.1.md
docs/protocol/: command-spec.md
examples/: README.md  python_client.py
include/command/: command_dispatcher.hpp
include/common/: nl_parser.hpp  string_utils.hpp
include/network/: server.hpp
include/persistence/: aof_persistence.hpp
include/protocol/: request_parser.hpp  resp.hpp
include/storage/: key_value_store.hpp
scripts/: README.md
scripts/ci/: run_ci.sh
scripts/dev/: bench.sh  build.sh  run.sh
scripts/release/: build_docker.sh  build_release.sh
src/app/: main.cpp
src/command/: command_dispatcher.cpp
src/common/: nl_parser.cpp
src/network/: server.cpp
src/persistence/: aof_persistence.cpp
src/protocol/: request_parser.cpp  resp.cpp
src/storage/: key_value_store.cpp
tests/integration/: test_command_flow.cpp  test_socket_level.cpp
tests/unit/: test_aof_persistence.cpp  test_command_dispatcher.cpp  test_key_value_store.cpp  test_nl_parser.cpp  test_request_parser.cpp
tools/: resp_inspector.py
